<resources>
    <string name="app_name">MyRadian Valuations</string>
    <string name="sign_in">Sign into your Radian Valuation Services account</string>
    <string name="enter_sign_in">Enter the same username and password you use to access the RVS vendor portal.</string>
    <string name="signup">Sign up</string>
    <string name="having_trouble">Having trouble signing in?</string>
    <string name="forgot_pwd">Forgot your password?</string>
    <string name="error_login_empty">Please Enter Mobile Number</string>
    <string name="error_login_invalid_number">Please Enter Valid Mobile Number</string>
    <string name="error_login_empty_username">Please Enter Username</string>
    <string name="error_login_empty_password">Please Enter Password</string>
    <string name="error_login_invalid_password">Please Enter Valid Password</string>
    <string name="error_login_invalid">Invalid Phone number. Please Enter Valid 10 digit Mobile Number.</string>
    <string name="error_choose_time">You must choose an appointment time to aceept this order.</string>
    <string name="error_enter_note">Please enter Note.</string>
    <string name="error_enter_strt_dte">Please Enter Start Date.</string>
    <string name="error_enter_end_dte">Please Enter End Date.</string>
    <string name="error_enter_appoinmnt">Please Enter Appointment Date and Tme.</string>
    <string name="confirm_passcode_text">Please Confirm Passcode</string>
    <string name="enter_coverage_amount">Please enter your coverage amount.</string>
    <string name="enter_policy_number">Please enter policy number.</string>
    <string name="enter_provider_name">Please enter provider name.</string>
    <string name="enter_expiry_date">Please select expiry date.</string>
    <string name="lbl_info_title">Make sure you have the right login information</string>
    <string name="lbl_info_text1">No need to create a new account!</string>
    <string name="lbl_info_text2">myradian valuations uses the login information for your Radian Valuation Services account.</string>
    <string name="lbl_info_text3">You can check to make sure you have the right information by logging into the RVS vendor portal.</string>
    <string name="lbl_info_text4">Our vendor support team is available to help.</string>
    <string name="lbl_info_text5">Not a Radian vendor?</string>
    <string name="lbl_info_text6">Join us! You can apply to be a Radian vendor</string>
    <string name="lbl_info_byphone">By phone</string>
    <string name="lbl_info_byemail">By email</string>
    <string name="contactUs">Contact Us</string>
    <string name="lbl_here">here.</string>
    <string name="eo">E&amp;O Document</string>
    <string name="w9">W9 Document</string>
    <string name="licence">License Update</string>
    <string name="delete">Delete</string>
    <string name="comp_photos">Comp Photos</string>
    <string name="sub_photos">Sub Photos</string>
    <string name="lbl_next_step">Next Step</string>
    <string name="lbl_dilg_header">We\'ll send this photo to your inspection contacts before your inspections. Make sure to use an image you\'d want them to see!</string>
    <string name="lbl_add_photo">Add a professional photo</string>
    <string name="lbl_photo_info">If multiple appraisers use this account, please do not add a photo.</string>
    <string name="loe">LOE</string>
    <string name="due_Date">Due Date:</string>
    <string name="aboutus">The myradian appraisals App mobile app allows members of Radian\'s vendor network to easily manage their Radian valuation orders.
The app streamlines every step of the process, including accepting orders, scheduling inspections and messaging directly with customers.\n
-        Highly secure web application hosted at a SSAE 16 data center that is ISO 9000and 27001 certified.
\n-        Advanced industry-specific compliance tools.
\n-        Automated workflows increase productivity.
    </string>
    <string name="contactAdd">1000 GSK Drive, Suite 210 </string>
    <string name="contactPhone">Coraopolis PA, 15108 Phone: (412)368-2288</string>
    <string name="website">https://amc.radianvaluations.com/</string>
    <string name="support">Support</string>
    <string name="gethelpTitle">Get Help</string>
    <string name="joinUs">Join us</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="new_orders">New Orders</string>
    <string name="open_orders">Orders</string>
    <string name="title_manage_order">Manage Order</string>
    <string name="moreDetailsTitle">More Details</string>
    <string name="messagesTitle">Messages</string>
    <string name="title_new_order_detail">New Order</string>
    <string name="rejectOrders">Reject Orders</string>
    <string name="conditnlAccept">CONDITIONAL ACCEPT</string>
    <string name="outOfOfiice">Out of Office</string>
    <string name="docTitle">Document</string>
    <string name="settingsTitle">Settings</string>
    <string name="coc">Code of Conduct</string>
    <string name="radianResponse">Radian’s response to COVID 19</string>
    <string name="revisionTitle">Revisions</string>
    <string name="appointmentTitle">Appointment</string>
    <string name="photoUploadTitle">Photos</string>
    <string name="showPdfTitle">Document Info</string>
    <string name="aboutUs">About us</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="revisionLabel">Revision</string>
    <string name="detail">Details</string>
    <string name="no_revision_found">No Revision Found</string>
    <string name="add_edit_title">Add/Edit Appointment Time</string>
    <string name="new_date_time">Date and Time</string>
    <string name="add_note">Add Note</string>
    <string name="save_changes">Save Changes</string>
    <string name="appointmnt_details">Appointment Details</string>
    <string name="time">Time</string>
    <string name="apt_address">Address</string>
    <string name="contact_name">Contact Name</string>
    <string name="apt_phone">Phone</string>
    <string name="apt_email">Email</string>
    <string name="enter_access_code">Please enter your passcode</string>
    <string name="enter_current_access_code">Please enter your current passcode</string>
    <string name="enter_new_access_code">Please enter your new passcode</string>
    <string name="create_new_access_code">Please create a passcode</string>
    <string name="confirm_new_access_code">Please confirm your new passcode</string>
    <string name="forgot_access_code">Forgot Passcode?</string>
    <string name="forgot_text">Enter the verification code sent to</string>
    <string name="please_try_again">Please try again</string>
    <string name="ok">Ok</string>
    <string name="enter_addressline_1">Please enter your address line 1.</string>
    <string name="enter_city">Please enter your city.</string>
    <string name="enter_zip">Please enter your zip.</string>
    <string name="enter_state">Please enter your state.</string>
    <string name="signOut">Do you want to Sign out?</string>
    <string name="btnSignOut">Sign Out</string>
    <string name="btncancel">Cancel</string>
    <string name="text_home">Home</string>
    <string name="text_orders">Orders</string>
    <string name="text_new">New</string>
    <string name="text_rewards">Rewards</string>
    <string name="empty_new_order">You don\'t have any new orders right now.</string>
    <string name="empty_new_order_detail">We\'ll notify you when there\'s a new order in your area!</string>
    <string name="empty_open_order">You don\'t have any orders right now. your area!</string>
    <string name="empty_dashboard">You\'re all caught up!</string>
    <string name="empty_dashboard_detail">We\'ll notify you when there\'s something new to do.</string>
    <string name="clear_message">Are you sure you want to clear?</string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="decline_restrictn_msg">You cannot Decline broadcast order.</string>
    <string name="lbl_dash_upcoming">Upcoming inspection</string>
    <string name="lbl_dash_nwordr">New Order Available</string>
    <string name="lbl_dash_revision">Revision request</string>
    <string name="lbl_dash_inspectn">Mark your inspection complete</string>
    <string name="lbl_dash_document">New Document</string>
    <string name="lbl_btn_view">View</string>
    <string name="lbl_btn_read">Mark as Read</string>
    <string name="lbl_btn_update">Update Appointment</string>
    <string name="lbl_btn_complete">Mark Complete</string>
    <string name="lbl_btn_decline">Decline</string>
    <string name="out_of_office">Out Of Office</string>
    <string name="about">About</string>
    <string name="gethelp">Get Help</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="eoCoverage">EO coverage</string>
    <string name="serviceType">Service Type</string>
    <string name="eoAmount">EO Amount</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="vendorName">Vendor Name</string>
    <string name="licenceno">License Plate</string>
    <string name="make">Car Make</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_option">Select Option</string>
    <string name="lbl_contact_name">Contact Name</string>
    <string name="lbl_call">Call</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_appointment">Appointment</string>
    <string name="lbl_loe">LOE</string>
    <string name="lbl_documents">Documents</string>
    <string name="lbl_new_documents">New Document</string>
    <string name="lbl_new_message">New Message</string>
    <string name="lbl_new_req">New Request</string>
    <string name="lbl_messages">Messages</string>
    <string name="lbl_revision">Revision Requests</string>
    <string name="lbl_more">More Details</string>
    <string name="permission_profile">Please allow myradian appraisals app to access camera and storage.</string>
    <string name="permission_call">Please allow myradian appraisals app to make phone call.</string>
    <string name="permission_calendar">Please allow myradian appraisals app to access calendar.</string>
    <string name="call_dialog_title">"Do you want to call?"</string>
    <string name="product_info">Product Information</string>
    <string name="type">Type</string>
    <string name="order_id">Order ID</string>
    <string name="loan_id">Loan ID</string>
    <string name="client">Client</string>
    <string name="borrower_info">Borrower Information</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="orderId">Order Id :</string>
    <string name="messages">Messages</string>
    <string name="str_select_asset">Asset</string>
    <string name="str_select_categories">Categories</string>
    <string name="str_select_photo_summary">Summary</string>
    <string name="str_ready_to_submit">Ready to submit</string>
    <string name="str_asset">Assets</string>
    <string name="str_categories">Categories</string>
    <string name="inspection_scheduled">Inspection is Scheduled</string>
    <string name="enter_initials">Please Enter Initials</string>
    <string name="select_expiry_date">Please select expiry date.</string>
    <string name="face_not_detect">Face is not detected in selected picture</string>
    <string name="capture_failed">Photo capture failed</string>
    <string name="select_asset">Please select asset</string>
    <string name="unknown_viewmodel">Unknown View Model class</string>
    <string name="photo_upload">Photo Upload</string>
    <string name="order">Order</string>
    <string name="miles">Miles:</string>
    <string name="notification_updated">Notification Updated</string>
</resources>