<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAboutUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/messinasans_regular"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/contactUs"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/contactAdd"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/contactPhone"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtWeblink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/messinasans_semibold"
                android:text="@string/website"
                android:textColor="@color/light_blue"
                android:textIsSelectable="true"
                android:textSize="@dimen/_14sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</RelativeLayout>