<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/lbl_info_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/lbl_info_text1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/lbl_info_text2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/lbl_info_text3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/contactUs"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/messinasans_regular"
                android:text="@string/lbl_info_text4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/messinasans_regular"
                    android:text="@string/lbl_info_byphone"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@android:color/black" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/messinasans_regular"
                        android:text=""
                        android:textColor="@color/color_green"
                        android:textSize="@dimen/_12sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_working_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/messinasans_regular"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_working_timing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/messinasans_regular"
                        android:text=""
                        android:textColor="@android:color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/messinasans_regular"
                    android:text="@string/lbl_info_byemail"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/messinasans_regular"
                    android:text=""
                    android:textColor="@color/color_green"
                    android:textSize="@dimen/_12sdp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/lbl_info_text5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/messinasans_regular"
                    android:text="@string/lbl_info_text6"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"
                   />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/messinasans_regular"
                    android:text="@string/lbl_here"
                    android:textColor="@color/color_green"
                    android:textSize="@dimen/_13sdp"
                    ></androidx.appcompat.widget.AppCompatTextView>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_22sdp"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingLeft="0dp"
        app:srcCompat="@drawable/ic_myradian_logo" />

</androidx.appcompat.widget.LinearLayoutCompat>
